# DailyWord

./: .env  .gitignore  async_test.py  hello.py  pyproject.toml  test.py
apps/dictionaryapi/: urls.py  views.py
apps/telegrambot/: activate_webhook  activate_webhook.py  get_chat_info.py  handlers.py  messages.py  models.py  repositories.py  requests.py  services.py  test.py  urls.py  utils.py  validation.py  views.py  webhook.py
apps/telegrambot/management/commands/: activate_webhook.py
apps/telegrambot/migrations/: 0001_initial.py  0002_rename_knowlege_level_user_language_knowlege_level.py
apps/telegrambot/repasitories/: repasitorys.py
apps/telegrambot/services/: services.py
apps/telegrambot/set_webhook/: start_telegram.py
myproject/: settings.py  urls.py
telegrambot/: handlers.py
